--- a/TicTacToe/CSS/tictactoe.css
+++ b/TicTacToe/CSS/tictactoe.css
@@ -6,13 +6,13 @@
     width: 100px;
     text-align: center;
 }
-.center div, .center p {
+.center div, .center p, .center td, .center table{
     text-align:center;
     margin-left:auto;
     margin-right:auto;
 }
 
-.gameboard, td {
+.gameboard, .gameboard td {
     border:1px solid black;
     border-collapse:collapse;
     margin-left:auto;
@@ -24,9 +24,31 @@
     width: 30px;
 }
 
-.table-container
+.rowborder table
+{   boder-collapse:collapse
+}
+
+.rowborder table tr
+{
+    font-size:20px;
+}
+
+.table-container-0
 {   display:flex;
     width:50%;
+}
+
+.table-container-1
+{   display:flex;
+    width:70%;
+}
+
+.noborder tr
+{
+    vertical-align:center;
+    border-left:1px solid black;
+    border-right:1px solid black;
+    boder-collapse:collapse;
 }
 
 .noborder-top td
@@ -47,7 +69,71 @@
     width:100%;
 }
 
+/* ------------------------------------------------------------------------------------------------------------------ */
+/* Sliders.                                                                                                           */
+/* ------------------------------------------------------------------------------------------------------------------ */
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input + .slider {
+  background-color: blue;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 
 
 
